[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/player/right1.png" type="Texture" id=1]
[ext_resource path="res://assets/player/up3.png" type="Texture" id=2]
[ext_resource path="res://assets/player/right3.png" type="Texture" id=3]
[ext_resource path="res://assets/player/left2.png" type="Texture" id=4]
[ext_resource path="res://assets/player/down3.png" type="Texture" id=5]
[ext_resource path="res://assets/player/up1.png" type="Texture" id=6]
[ext_resource path="res://assets/player/left1.png" type="Texture" id=7]
[ext_resource path="res://assets/player/down2.png" type="Texture" id=8]
[ext_resource path="res://assets/player/right2.png" type="Texture" id=9]
[ext_resource path="res://assets/player/down1.png" type="Texture" id=10]
[ext_resource path="res://assets/player/left3.png" type="Texture" id=11]
[ext_resource path="res://assets/player/up2.png" type="Texture" id=12]
[ext_resource path="res://assets/player/stand.png" type="Texture" id=13]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=14]
[ext_resource path="res://assets/sound/ctrl-z-sound.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sound/reset_sound.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "walkDown",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "walkLeft",
"speed": 6.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "walkRight",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 12 ), ExtResource( 2 ) ],
"loop": true,
"name": "walkUp",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.8789
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.8036

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 259.288, 82.6463 )
script = ExtResource( 14 )
speed = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "walkDown"
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.12372, 11.2938 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.31451, 2.70457 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="Node" type="Node" parent="."]

[node name="CtrlZ" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 15 )

[node name="Node2" type="Node" parent="."]

[node name="Reset" type="AudioStreamPlayer" parent="Node2"]
stream = ExtResource( 16 )
volume_db = -3.872
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
